added page content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Simon Haugen</title>
+		<link rel="stylesheet" href="styles.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+	</head>
+	<body>
+		<main class="profile-card">
+			<div class="image-container">
+				<img src="assets/profile.jpg" />
+			</div>
+			<h1 class="title">Simon Haugen</h1>
+			<div class="social-media-container">
+				<a href="https://github.com/smnhgn" target="_blank">
+					<i class="fa fa-github"></i>
+				</a>
+				<a href="https://twitter.com/smnhgn" target="_blank">
+					<i class="fa fa-twitter"></i>
+				</a>
+			</div>
+		</main>
+	</body>
+</html>
